fixing the alignment of the instructions

--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,10 @@ main {
 }
 
 #styleB {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
 
 }
 
